styles/styles.css
/* SEC: Imports */
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap');


/* SEC: Design System Setup */
:root {
    --cyan: #66E2DC;
    --orange: #FA7A53;
    --light-orange: #FFB964;
    --white: #FCFAF9;
    --black: #191826;
}


* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html,
body {
    width: 100vw;

}

body {
    background-image: url("../assets/bg-main-desktop.png");
    background-repeat: no-repeat;

    background-size: 120%;
    background-position-x: -164px;
    background-position-y: -200px;
    display: flex;
    flex-direction: column;
    justify-content: left;
    padding: 0 166px;

}

/* SEC: Nav Elements */
nav {
    position: relative;
    padding-top: 62px;
    margin-bottom: 120px;
}

nav::after {
    position: absolute;
    top: -40px;
    right: -166px;
    content: '';
    width: 312px;
    height: 468px;
    background-image: url("../assets/bg-pattern-1.svg");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    z-index: -1;
}

/* SEC: Hero Page Text */
.hero-text {
    width: 845px;
    margin-bottom: 330px;

}

.hero-text h1 {
    font-family: 'IBM Plex Sans';
    font-style: normal;
    font-weight: 700;
    font-size: 88px;
    line-height: 88px;
    /* or 100% */

    letter-spacing: -1px;
}

.hero-text p {
    font-family: 'IBM Plex Sans';
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 34px;
    margin-top: 40px;
}

/* SEC:Banner */
.banner {
    position: relative;
    width: 100%;
    height: 600px;
    background-image: url('../assets/bg-pattern-2.svg');
    background-position-x: 335px;
    background-position-y: -40px;
    background-repeat: no-repeat;
    background-color: var(--black);
    overflow: visible;
    border-radius: 12px;

}

#phone {
    position: absolute;
    width: 312px;
    height: 642px;
    top: -213px;
    left: 102px;
}

.card {
    position: absolute;
    width: 446px;
    height: 625px;
    background-color: var(--orange);
    right: 95px;
    top: 90px;
    border-radius: 12px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: flex-start;
    padding: 48px 59px 48px 54px;
}

.card h2 {
    font-family: 'IBM Plex Sans';
    font-style: normal;
    font-weight: 700;
    font-size: 40px;
    line-height: 52px;
    color: var(--white)
}

.card p {
    font-family: 'IBM Plex Sans';
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 34px;
    color: var(--white);
}


#pricing {
    display: flex;
    align-items: center;
}

#pricing span {
    font-family: 'IBM Plex Sans';
    font-style: normal;
    font-weight: 700;
    font-size: 65px;
    line-height: 52px;
    margin-right: 10px;
    color: var(--white);
}

#pricing p {
    display: inline-block;

}

.card button {
    width: 100%;
    text-align: center;
    border: none;
    border-radius: 12px;
    padding: 15px;
}

.card button span {
    font-family: 'IBM Plex Sans';
    font-style: normal;
    font-weight: 700;
    font-size: 18px;
    line-height: 32px;
    letter-spacing: -0.18px;
}

.card button img,
.card button span {
    vertical-align: middle;
    text-align: center;
}

#apple-btn {
    color: var(--white);
    background-color: var(--black);
    transition: background-color .5s ease;
}

#apple-btn:hover {
    background-color: var(--cyan);
}

#android-btn {
    color: var(--black);
    background-color: var(--white);
    transition: background-color .5s ease;
}

#android-btn:hover {
    background-color: var(--light-orange);
}

/* SEC: Footer */


footer {
    margin-top: 202px;
    display: flex;
    justify-content: space-between;
    gap: 137px;

    height: 80px;
}

footer .logo {

    align-self: flex-start;
    width: 146px;
    height: 32px;
}

footer p {
    font-family: 'IBM Plex Sans';
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 26px;
    color: var(--black);
    flex: 2;
}

footer p a {
    font-weight: 700;
    color: var(--black);
    text-decoration: none;
}


.icon-set {
    align-self: center;
    justify-self: flex-end;
}

.icon-set img {
    margin: 0 10px;
}

.icon-set img:hover {
    filter: invert(58%) sepia(45%) saturate(1719%) hue-rotate(327deg) brightness(103%) contrast(96%);
}



@media screen and (max-width: 770px) {

    body {
        padding: 0 32px;
        margin-bottom: 85px;
    }

    nav::after {
        top: -32px;
        right: -67px;
        width: 266.67px;
        height: 400px;
    }

    .hero-text {
        width: auto;
        margin-right: 180px;
    }

    .hero-text h1 {
        font-size: 64px;
        line-height: 64px;
    }

    .hero-text p {
        font-size: 18px;
        line-height: 28px;
    }

    .banner {
        background-position-x: 229px;
        background-size: 280px;
    }

    #phone {
        left: 64px;
        top: -183px;
        width: 270.21px;
        height: 556px;
    }

    .card {
        right: 58px;
        top: 150px;
        width: 399px;
        height: 546;
    }

    .card h2 {
        font-size: 32px;
        line-height: 40px;
    }

    .card p {
        font-size: 18px;
        line-height: 28px;
    }

    footer {
        flex-wrap: wrap;
        gap: 20px;
        margin-bottom: 20px;
    }

    footer .logo {
        margin-right: 100%;

    }

}

@media screen and (max-width: 375px) {
    body {
        background-image: url('../assets/bg-main-mobile.png');
        background-position-x: 100px;
        background-position-y: -100px;
        background-repeat: no-repeat;
        background-size: contain;
        padding: 0 0;
        margin-bottom: 20px;
    }

    nav {
        padding: 40px 24px;
        margin-bottom: 40px;
    }

    nav::after {
        background-image: none;
        width: 0px;
        height: 0px;
    }

    .hero-text {
        width: 100%;
        padding: 0 24px;
        margin-bottom: 250px;
    }

    .hero-text h1 {
        font-size: 40px;
        line-height: 48px;
        /* or 120% */
        letter-spacing: -0.454545px;
    }

    .banner {
        width: 100%;
        background-position: center;
        background-position-y: 0px;
        margin-bottom: 474px;
    }

    #phone {
        width: 208.97px;
        height: auto;
        margin-bottom: 48px;
    }

    .card {
        width: 100%;
        left: 0;
        top: 380px;
        padding: 48px 37px
    }

    .card h2 {
        font-size: 32px;
        line-height: 40px;
    }

    .card p {
        font-size: 18px;
        line-height: 28px;
    }

    footer {
        flex-direction: column;
        gap: 10px;
        height: auto;

        max-width: 360px;
        padding: 0 20px;
    }

    footer p {
        align-self: flex-start;
        font-style: normal;
        font-weight: 400;
        font-size: 16px;
        line-height: 26px;
        flex: 2;
        padding: 2px;
        display: inline-block;
    }

    .icon-set {
        margin-top: 50px;
        justify-self: left;
        align-self: flex-start;
    }
}

